--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             Article One | GG
         </title>
+            <meta name = "viewport" content = "width = device-width, initial-scale = 1" />
     </head>
     <body>
         <div>
@@ -10,7 +11,7 @@
         </div>
         <hr/>
         <h3>
-          Artcile One  
+          Article One  
         </h3>
         <div>
             Aug 8, 2017
