--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am GG.
         </div>
         <script>
-            alert("Hi, i'm javascript")
+            alert("Hi, I'm javascript")
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
